--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hi this is my homepage!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Chetan Giraddi</title>
+</head>
+<body>
+
+<h1></h1>
+<p>Hi! This is my homepage, under construction.</p>
+
+</body>
+</html>
