--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
 <head>
-<title>Chetan Giraddi</title>
+<title>Chetan's Homepage</title>
+  <!-- version 1.0 - created on 13-Nov-2020 -->
 </head>
+
+
 <body>
 
-<h1></h1>
-<p>Hi! This is my homepage, under construction.</p>
+<h1> Chetan Giraddi </h1>
+
+<hr>
+
+<div class="image img_left">
+<img src = "photo.jpg" width = "250" height = "auto" alt = "Chetan" ALIGN=”right” /> 
+</div>
+
+<h3> About Me </h3>
+<p>I am a Mechatronics Engineer, currently working as a research associate at <a href = "https://www.kuleuven.be/wieiswie/en/unit/55685432" target="_blank">KU Leuven Engineering Technology Campus in Brugge</a>, Belgium.</p>
+
+<p>Mechatronics being a multidisciplinary branch of engineering, I have a broad interesting in controls engineering, multibody dynamics modeling and simulation, model based system design and embedded software. As well, I am fascinated by the advacements in the electronics-based technology leading to artificial intelligence. I am open and eager to learn different domains of engineering and enjoy working in a multidisciplinary team.</p>
+
+<p>I graduated with Master of Science (<i>burgerlijk ingenieur</i>) from the <a href="https://onderwijsaanbod.kuleuven.be/opleidingen/e/CQ_52354207.htm" target="_blank"> Department of Mechanical Engineering, KU Leuven</a> in February 2018 with the thesis titled “Applying complementary energy methods to estimate ground reaction forces of an exoskeleton” under the supervision of Prof. dr. ir. Joris de Schutter. Before, I earned my undergradate degree [B.E.(Hons.) in Mechanical Engineering] from <a href="https://www.bits-pilani.ac.in/Goa/" target="_blank">BITS Pilani</a>, India. </p>
+
+<p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests. </p>
 
 </body>
 </html>
