--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <html>
 <head>
 <title>Chetan's Homepage</title>
+<link rel="stylesheet" type="text/css" href="mystyles.css" title="Default" />
+
   <!-- version 1.0 - created on 13-Nov-2020 -->
 </head>
 
