--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <html>
 <head>
 <title>Chetan's Homepage</title>
-<link rel="stylesheet" type="text/css" href="mystyles.css" title="Default" />
-
+<link rel="stylesheet" type="text/css" href="mystyles.css" media="screen, tv, projection" title="Default" />
   <!-- version 1.0 - created on 13-Nov-2020 -->
 </head>
 
@@ -14,13 +13,17 @@
 
 <h1> Chetan Giraddi </h1>
 
-<hr>
+
+<div> <a href="#contact">Contact</a> </div>
+
+<hr/>
 
 <div class="image img_left">
-<img src = "photo.jpg" width = "250" height = "auto" alt = "Chetan" ALIGN=”right” /> 
+<img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
 </div>
 
 <h3> About Me </h3>
+<div class="just">
 <p>I am a Mechatronics Engineer, currently working as a research associate at <a href = "https://www.kuleuven.be/wieiswie/en/unit/55685432" target="_blank">KU Leuven Engineering Technology Campus in Brugge</a>, Belgium.</p>
 
 <p>Mechatronics being a multidisciplinary branch of engineering, I have a broad interesting in controls engineering, multibody dynamics modeling and simulation, model based system design and embedded software. As well, I am fascinated by the advacements in the electronics-based technology leading to artificial intelligence. I am open and eager to learn different domains of engineering and enjoy working in a multidisciplinary team.</p>
@@ -28,6 +31,18 @@
 <p>I graduated with Master of Science (<i>burgerlijk ingenieur</i>) from the <a href="https://onderwijsaanbod.kuleuven.be/opleidingen/e/CQ_52354207.htm" target="_blank"> Department of Mechanical Engineering, KU Leuven</a> in February 2018 with the thesis titled “Applying complementary energy methods to estimate ground reaction forces of an exoskeleton” under the supervision of Prof. dr. ir. Joris de Schutter. Before, I earned my undergradate degree [B.E.(Hons.) in Mechanical Engineering] from <a href="https://www.bits-pilani.ac.in/Goa/" target="_blank">BITS Pilani</a>, India. </p>
 
 <p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests. </p>
+
+</div>
+<hr/>
+
+<h3><a id="contact">Contact</a></h3>
+
+<p>email: cetan[dot]tg [at] gmail[dot]com</p>
+<p>work address: Spoorwegstraat 12, 8200 Brugge, BE</p>
+<p>linkedin: <a href="https://www.linkedin.com/in/chetantg/" target="_blank">chetantg </a> </p>
+
+
+
 
 </body>
 </html>
