--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>I graduated with Master of Science (<i>burgerlijk ingenieur</i>) from the <a href="https://onderwijsaanbod.kuleuven.be/opleidingen/e/CQ_52354207.htm" target="_blank"> Department of Mechanical Engineering, KU Leuven</a> in February 2018 with the thesis titled “Applying complementary energy methods to estimate ground reaction forces of an exoskeleton” under the supervision of Prof. dr. ir. Joris de Schutter. Before, I earned my undergradate degree [B.E.(Hons.) in Mechanical Engineering] from <a href="https://www.bits-pilani.ac.in/Goa/" target="_blank">BITS Pilani</a>, India. </p>
 
-<p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests. </p>
+<p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests.  Contact me for the detailed curriculum vitae </p>
 
 </div>
 <hr/>
