--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
 <h1> Chetan Giraddi </h1>
 
+<div id="inner_header">
+    <ul>
+        <li> <a href="#about">About Me </a> </li>
+        <li> <a href="#projects">Projects </a> </li>
+        <li> <a href="#contact">Contact </a> </li>
+    </ul>
+</div>
 
-<div> <a href="#contact">Contact</a> </div>
 
 <hr/>
 
@@ -22,7 +28,7 @@
 <img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
 </div>
 
-<h3> About Me </h3>
+<h3><a id="about"> About Me </a></h3>
 <div class="just">
 <p>I am a Mechatronics Engineer, currently working as a research associate at <a href = "https://www.kuleuven.be/wieiswie/en/unit/55685432" target="_blank">KU Leuven Engineering Technology Campus in Brugge</a>, Belgium.</p>
 
@@ -30,17 +36,37 @@
 
 <p>I graduated with Master of Science (<i>burgerlijk ingenieur</i>) from the <a href="https://onderwijsaanbod.kuleuven.be/opleidingen/e/CQ_52354207.htm" target="_blank"> Department of Mechanical Engineering, KU Leuven</a> in February 2018 with the thesis titled "Applying complementary energy methods to estimate ground reaction forces of an exoskeleton" under the supervision of Prof. dr. ir. Joris de Schutter. Before, I earned my undergradate degree [B.E.(Hons.) in Mechanical Engineering] from <a href="https://www.bits-pilani.ac.in/Goa/" target="_blank">BITS Pilani</a>, India. </p>
 
-<p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests.  Contact me for the detailed curriculum vitae. </p>
+<p> I have ~4 years of work experience in the industrial automation and automotive industry. In my last position as Test Engineer R&D for dual clutch transmission development at <a href="http://www.punchpowertrain.com" target="_blank"> Punch Powertrain NV</a>, I have gained good understanding of the working of e-dyno test rigs using dSpace ControlDesk and also I have gained good experience working with the hardware, sensing and DAQ systems for development tests. <a href="#contact">Contact</a> me for the detailed curriculum vitae. </p>
 
-</div>
 <hr/>
 
-<h3><a id="contact">Contact</a></h3>
+<h2><a id="projects">Projects:</a></h2>
+    <h3>Master's Thesis</h3>
+    <div class="tab">
+    <p><b>Applying complementary energy methods to estimate ground reaction forces of an exoskeleton</b></p>
+    <p><b>Promoters: </b> Prof. dr. ir. Joris De Schutter & dr. ir. Erwin Aertbelien </p>
+    <p>Estimation of the ground contact forces and moments is a major challenge faced in thedevelopment of a model based control algorithm for an exoskeleton. The distribution of thecontact forces is indirectly determined by the compliances in the system. This property is exploitedin this thesis to solve indeterminate contact situations of the exoskeleton. (Distribution of thework: 15% literature, 55% dynamics modelling, simulation and 30% experimental validation.Exoskeleton used in this thesis was developed under <a href="https://www.mirad-sbo.be" target="_blank">MIRAD project</a>.) </p>
+    <p><b>Publication: </b> Vantilt, J., Giraddi, C., Aertbelien, E., De Groote, F., & De Schutter, J. (2018). Estimating Contact Forces and Moments for Walking Robots and Exoskeletons using Complementary EnergyMethods. <i>IEEE Robotics and Automation Letters</i>. <a href="https://ieeexplore.ieee.org/document/8403276" target="_blank"> doi: 10.1109/LRA.2018.2852776 </a> </p>
+    <p><b>Presentation: </b> 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), October 1-5, 2018, Madrid, Spain. </p>
+</div>
+
+    <h3>Professional Work</h3>
+    <p class="tab"> <a href="#contact">Contact</a> me for information on professional projects I have been involved with. </p>
+
+</div>
+
+<hr/>
+
+<h3><a id="contact">Contact:</a></h3>
 
 <p>email: cetan[dot]tg [at] gmail[dot]com</p>
 <p>work address: Spoorwegstraat 12, 8200 Brugge, BE</p>
 <p>linkedin: <a href="https://www.linkedin.com/in/chetantg/" target="_blank">chetantg </a> </p>
 
+<h3>Additional links:</h3>
+
+<p><a href="https://scholar.google.be/citations?user=35mYV7wAAAAJ&hl" target="_blank">Google Scholar</a></p>
+<p>ORCID: <a href="https://orcid.org/0000-0002-6118-067X" target="_blank">0000-0002-6118-067X</a></p>
 
 <hr/>
 <p> <i>Last updated on: 13-Nov-2020</i> </p>
