--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <title>Chetan's Homepage</title>
-<link rel="stylesheet" type="text/css" href="mystyles.css" media="screen, tv, projection" title="Default" />
+<link rel="stylesheet" type="text/css" href="mystyles.css" />
   <!-- version 1.0 - created on 13-Nov-2020 -->
 </head>
 
