--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
 <html>
 <head>
 <title>Chetan's Homepage</title>
-<link rel="stylesheet" type="text/css" href="mystyles.css" />
+<link rel="stylesheet" type="text/css" href="mystyles.css">
+    <script src="scripts.js"></script>
   <!-- version 1.0 - created on 13-Nov-2020 -->
 </head>
 
-
 <body>
 
-<h1> Chetan Giraddi </h1>
-
 <div id="inner_header">
+<h1> Chetan Giraddi </h1>
     <ul>
         <li> <a href="#about">About Me </a> </li>
         <li> <a href="#projects">Projects </a> </li>
         <li> <a href="#contact">Contact </a> </li>
+        <li> <a href="/mynotes/notes.html"> &#9; My Notes </a> </li>
     </ul>
+    <hr/>
 </div>
-
-
-<hr/>
 
 <div class="image img_left">
 <img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
