--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
 <h3><a id="contact">Contact:</a></h3>
 
-<p>email: cetan[dot]tg [at] gmail[dot]com</p>
-<p>work address: Spoorwegstraat 12, 8200 Brugge, BE</p>
+<p>cetan[dot]tg [at] gmail[dot]com</p>
 <p>linkedin: <a href="https://www.linkedin.com/in/chetantg/" target="_blank">chetantg </a> </p>
+<p>work address: Spoorwegstraat 12, 8200 Brugge, BE</p>
+
 
 <h3>Additional links:</h3>
 
