--- a/mynotes/notes.html
+++ b/mynotes/notes.html
@@ -21,7 +21,7 @@
 
 <div class="sidenav">
   <ul>
-  <li> <a href="#PGS">Planetary Gear System</a> </li>
+  <li> <a href="#PGS">Planetary Gear Set</a> </li>
     </ul>
 </div>
 
