adjusted pdf size

--- a/mynotes/notes.html
+++ b/mynotes/notes.html
@@ -22,11 +22,20 @@
 <div class="sidenav">
   <ul>
   <li> <a href="#PGS">Planetary Gear Set</a> </li>
+    <li> <a href="#ARCS">Robot Skill Design</a> </li>
     </ul>
 </div>
 
 <div class="main">
-<embed id="PGS" src="PGS.pdf" width="800px" height="2100px" />
+  <h3>Equations of dynamics for Planetary Gear Sets</h3>
+<embed id="PGS" src="PGS.pdf" width="780px" height="1560px" />
+  <br> <br> <br> <br>
+  <hr/>
+  <h3>Notes for Robot Skill Design Challenge</h3>
+<embed id="ARCS" src="ARCS-chetan.pdf" width="780px" height="1560px" />
+    <br> <br> <br> <br>
+  <hr/>
+
 </div>
 </body>
 </html>
