--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li> <a href="#about">About Me </a> </li>
         <li> <a href="#projects">Projects </a> </li>
         <li> <a href="/mynotes/notes.html"> &#9; My Notes </a> </li>
+        <li> <a href="/resources.html"> &#9; Resources </a> </li>
         <li> <a href="#contact">Contact </a> </li>
     </ul>
     <hr/>
