resources, index nav updated

--- a/index.html
+++ b/index.html
@@ -9,19 +9,10 @@
 </head>
 
 <body>
-
 <h1> Chetan Giraddi </h1>
-<div id="inner_header">
-    <ul>
-        <li> <a href="#about">About Me </a> </li>
-        <li> <a href="#projects">Projects </a> </li>
-        <li> <a href="/mynotes/notes.html"> &#9; My Notes </a> </li>
-        <li> <a href="/resources.html"> &#9; Resources </a> </li>
-        <li> <a href="#contact">Contact </a> </li>
-    </ul>
-    <hr/>
-</div>
 
+<div class="main_index">
+    <hr/>
 <div class="image img_left">
 <img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
 </div>
@@ -66,9 +57,19 @@
 
 <p><a href="https://scholar.google.be/citations?user=35mYV7wAAAAJ&hl" target="_blank">Google Scholar</a></p>
 <p>ORCID: <a href="https://orcid.org/0000-0002-6118-067X" target="_blank">0000-0002-6118-067X</a></p>
+</div>
 
+<div class="bottnav">
 <hr/>
-<p> <i>Last updated on: 27-Nov-2020</i> </p>
+    <ul>
+        <li> <a href="#contact">Contact </a> </li>
+        <li> <a href="/resources.html"> &#9; Resources </a> </li>
+        <li> <a href="/mynotes/notes.html"> &#9; My Notes </a> </li>
+        <li> <a href="#projects">Projects </a> </li>
+        <li> <a href="#about">About Me </a> </li>
+    </ul>
 
+<p style="font-size:10px"> <i>Last updated on: 27-Nov-2020</i> </p>
+</div>
 </body>
 </html>
