--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="topnav" id="inner_header">
+<div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
   <p> Books and references that I found useful/interesting.. </p>
 
@@ -25,11 +25,11 @@
 
     <p><strong>The Scientist and Engineer's Guide to Digital Signal Processing</strong> <br>
     by Steven W. Smith <br>
-    <a href="http://www.dspguide.com/pdfbook.htm">Link</a></p>
+    <a href="http://www.dspguide.com/pdfbook.htm">[Link]</a></p>
 
     <p><strong>Control System Lectures</strong> <br>
     on YouTube by Brian Douglas <br>
-    <a href="https://www.youtube.com/user/ControlLectures/videos">Link</a></p>
+    <a href="https://www.youtube.com/user/ControlLectures/videos">[Link]</a></p>
 
     <p> <strong>Modal Analysis Theory and Testing</strong> <br>
     by Ward Heylen et al. <br>
