resources, css updated

--- a/resources.html
+++ b/resources.html
@@ -14,9 +14,9 @@
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
   <p> Books and references that I found useful/interesting.. </p>
 
-    <hr/>
-</div>
-
+    </div>
+<div class="main_index">
+<hr/>
 <div>
   <ul>
     <p> <strong>Structures or why things don't fall down</strong> <br>
@@ -35,6 +35,7 @@
     by Ward Heylen et al. <br>
     </p>
   </ul>
+</div>
 </div>
 
 </body>
