--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
   <p> Books and references that I found useful/interesting.. </p>
 
     </div>
-<div class="main_index">
+<div class="main">
 <hr/>
 <div>
   <ul>
@@ -36,6 +36,7 @@
     </p>
   </ul>
 </div>
+
 </div>
 
 </body>
