--- a/mynotes/notes.html
+++ b/mynotes/notes.html
@@ -12,7 +12,7 @@
 <body>
 
 
-<div class="topnav" id="inner_header">
+<div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
   <p> You can find some of my notes here.. </p>
 
