--- a/resources.html
+++ b/resources.html
@@ -13,10 +13,11 @@
 <div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
   <p> Books and references that I found useful/interesting.. </p>
-
-    </div>
-<div class="main">
 <hr/>
+    </div>
+
+<div class="main_index">
+
 <div>
   <ul>
     <p> <strong>Structures or why things don't fall down</strong> <br>
