--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <html>
 <head>
-<title>Chetan's Notes</title>
+<title>Chetan's Resources</title>
 <link rel="stylesheet" type="text/css" href="../mystyles.css" />
   <!--  -->
 
