--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,10 @@
     &#9733&#9733&#9733&#9733&#9733
     </p>
 
+    <p><strong>Mathematics: its content, methods and meaning</strong> <br>
+    by A. D. Aleksandrov, A. N. Kolmogorov, M. A. Lavrent'ev <br>
+    <a href="http://index-of.es/Varios-2/Mathemathics%20Its%20Content,%20Methods,%20Applications.pdf">[Link]</a></p>
+
     <p><strong>The Scientist and Engineer's Guide to Digital Signal Processing</strong> <br>
     by Steven W. Smith <br>
     <a href="http://www.dspguide.com/pdfbook.htm">[Link]</a></p>
