--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,7 @@
 
 </head>
 
+<!--<body style="background-color:#F6F1F0;">-->
 <body>
 <div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
