--- a/mynotes/notes.html
+++ b/mynotes/notes.html
@@ -9,9 +9,8 @@
 
 </head>
 
+<!--<body style="background-color:#F6F1F0;">-->
 <body>
-
-
 <div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
   <p> You can find some of my notes here.. </p>
