--- a/resources.html
+++ b/resources.html
@@ -27,7 +27,7 @@
     </p>
 
     <p><strong>Mathematics: its content, methods and meaning</strong> <br>
-    by A. D. Aleksandrov, A. N. Kolmogorov, M. A. Lavrent'ev <br>
+    by A. D. Aleksandrov et al. <br>
     <a href="http://index-of.es/Varios-2/Mathemathics%20Its%20Content,%20Methods,%20Applications.pdf">[Link]</a></p>
 
     <p><strong>The Scientist and Engineer's Guide to Digital Signal Processing</strong> <br>
