--- a/resources.html
+++ b/resources.html
@@ -44,6 +44,14 @@
   </ul>
 </div>
 
+  <h4>Bookmarks</h4>
+  <div>
+    <ul>
+      <p> <a href="https://www.fourmilab.ch/hackdiet/">[Link]</a> The Hacker's Diet -by John Walker</p>
+    </ul>
+  </div>
+
+
 </div>
 
 </body>
