--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,11 @@
     <p> <strong>Modal Analysis Theory and Testing</strong> <br>
     by Ward Heylen et al. <br>
     </p>
+
+    <p> <strong>Mechatronics: dynamics of electromechanical and piezoelectric systems </strong> <br>
+    by A. Preumont <br>
+    </p>
+
   </ul>
 </div>
 
