resources, my notes clean up

--- a/mynotes/resources.html
+++ b/mynotes/resources.html
@@ -13,13 +13,25 @@
 <body>
 <div class="topnav">
   <h1> <a style="text-decoration:none" href="../index.html">Chetan Giraddi </a> </h1>
-  <p> Books and references that I found useful/interesting.. </p>
+  <p> My notes | Books and references that I found useful/interesting.. </p>
 <hr/>
     </div>
 
 <div class="main_resource">
 
 <div>
+  <h3 style="background-color:#FFC0C0; text-align:center;"> My Notes </h3>
+  <ul>
+    <li> <a href="PGS.pdf"> Equations of dynamics for Planetary Gear Sets </a> </li>
+    <li> <a href="ARCS-chetan.pdf"> Notes for Robot Skill Design Challenge </a> </li>
+  </ul>
+</div>
+<br>
+
+
+<div>
+  <h3 style="background-color:#D0D0FF;text-align:center;"> References </h3>
+
   <ul>
     <p> <strong>Structures or why things don't fall down</strong> <br>
     by J.E.Gordon <br>
@@ -48,14 +60,14 @@
 
   </ul>
 </div>
+<br>
 
-  <h4>Bookmarks</h4>
   <div>
+  <h3 style="background-color:#90FF90;text-align:center;"> Bookmarks </h3>
     <ul>
       <p> <a href="https://www.fourmilab.ch/hackdiet/">[Link]</a> The Hacker's Diet -by John Walker</p>
     </ul>
   </div>
-
 
 </div>
 
