project FEA platform added

--- a/project_platf/rep_platform_FEA.html
+++ b/project_platf/rep_platform_FEA.html
@@ -59,7 +59,7 @@ The following pages document the steps followed during the static and dynamics a
     </figure>
 
 <figure>
-<img src="modes.png" height="500">
+<img src="Modes.png" height="500">
 <figcaption> Fig: Natural frequencies of structure as solved by SOL 103. </figcaption>
     </figure>
 
