--- a/mynotes/resources.html
+++ b/mynotes/resources.html
@@ -67,6 +67,8 @@
   <h3 style="background-color:#90FF90;text-align:center;"> Bookmarks </h3>
     <ul>
       <p> <a href="https://www.fourmilab.ch/hackdiet/">[Link]</a> The Hacker's Diet -by John Walker</p>
+      <p> <a href="https://www.youtube.com/watch?v=xkbQnBAOFEg">[Link]</a> Understanding Failure Theories (Tresca, von Mises etc...)
+ - Youtube video by <a href="https://efficientengineer.com/">The Efficient Engineer</a>.</p>
     </ul>
   </div>
 
