--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="just">
 <p>I am a Mechatronics Engineer, currently working as a research associate at <a href = "https://www.kuleuven.be/wieiswie/en/unit/55685432" target="_blank">KU Leuven Engineering Technology Campus in Brugge</a>, Belgium.</p>
 
-<p>Mechatronics being a multidisciplinary branch of engineering, I have a broad interest in controls engineering, structural dynamics, multibody dynamics modeling and simulation, model based system design and embedded software. As well their application in hi-tech industry and intelligent mechatronic systems. I am open and eager to learn different domains of engineering and enjoy working in a multidisciplinary team.</p>
+<p>Mechatronics being a multidisciplinary branch of engineering, I have a broad interest in controls engineering, model based system design, structural dynamics, multibody dynamics modeling and simulation. As well their application in hi-tech industry and intelligent mechatronic systems. I am open and eager to learn different domains of engineering and enjoy working in a multidisciplinary team.</p>
 
 <p>I graduated with Master of Science (<i>burgerlijk ingenieur</i>) from the <a href="https://onderwijsaanbod.kuleuven.be/opleidingen/e/CQ_52354207.htm" target="_blank"> Department of Mechanical Engineering, KU Leuven</a> in February 2018 with the thesis titled "Applying complementary energy methods to estimate ground reaction forces of an exoskeleton" under the supervision of Prof. dr. ir. Joris de Schutter. Before, I earned my undergradate degree [B.E.(Hons.) in Mechanical Engineering] from <a href="https://www.bits-pilani.ac.in/Goa/" target="_blank">BITS Pilani</a>, India. </p>
 
