thesis link added

--- a/mynotes/resources.html
+++ b/mynotes/resources.html
@@ -22,6 +22,7 @@
 <div>
   <h3 style="background-color:#FFC0C0; text-align:center;"> My Notes </h3>
   <ul>
+  <li> <a href="Thesis_ppt.pdf"> Master's Thesis presentation </a></li>
   <li> <a href="../project_platf/rep_platform_FEA"> FEA on metal platform using SOL101 and SOL103 | Tutorial SOL103 </a></li>
   <li> <a href="../fatigue/Basquin.html"> Basquin Expression </a></li>
   <li> <a href="PGS.pdf"> Equations of dynamics for Planetary Gear Sets </a> </li>
