Hamming's book link added

--- a/mynotes/resources.html
+++ b/mynotes/resources.html
@@ -53,6 +53,11 @@
     on YouTube by Brian Douglas <br>
     <a href="https://www.youtube.com/user/ControlLectures/videos">[Link]</a></p>
 
+    <p> <strong>The Art of Doing Science and Engineering: Learning to Learn</strong> <br>
+    by Richard Hamming <br>
+      <a href="https://www.youtube.com/watch?v=AD4b-52jtos">[Lecture]</a></p>
+    </p>
+
     <p> <strong>Modal Analysis Theory and Testing</strong> <br>
     by Ward Heylen et al. <br>
     </p>
