hamming's quote added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 </div>
 <div class="main_index">
     <hr/>
+
+    <p style="text-align:right"><q><i>If what you are doing is not important, and if you don't think it is going to lead to something important, why are you working on it?</i></q> <br> ~ Richard Hamming </p>
+
 <div class="image img_left">
 <img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
 </div>
+
 
 <h3><a id="about"> About Me </a></h3>
 <div class="just">
