--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="main_index">
     <hr/>
 
-    <p style="text-align:right"><q><i>If what you are doing is not important, and if you don't think it is going to lead to something important, why are you working on it?</i></q> <br> ~ Richard Hamming </p>
+    <p style="text-align:right"><q><i>If what you are working on is not important and not likely to lead to important things, then why are you working on it?</i></q> <br> ~ Richard Hamming </p>
 
 <div class="image img_left">
 <img src = "photo.jpg" width = "140" height = "auto" alt = "Chetan" /> 
